--- a/src/components/Message/index.css
+++ b/src/components/Message/index.css
@@ -1,6 +1,6 @@
 /* Write your CSS here */
-p {
-  font-family: Roboto;
+h1 {
+  font-family: roboto;
   text-align: center;
   color: #ffffff;
   font-family: Bold;
