--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -12,7 +12,8 @@
   background-image: linear-gradient(#2b2c49, #b5b9ff);
   padding: 40px;
   border-radius: 20px;
+  min-width: 200px;
 }
-/* div {
+div {
   text-align: center;
-} */
+}
